--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AuthorTable.cs" />
+    <Compile Include="Models\CategoryTable.cs" />
     <Compile Include="Models\ProductsTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
