--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\ProductFactory.cs" />
     <Compile Include="Models\AuthorTable.cs" />
     <Compile Include="Models\CategoryTable.cs" />
     <Compile Include="Models\ProductsTable.cs" />
