--- a/BogWebShop/BogWebShop.csproj
+++ b/BogWebShop/BogWebShop.csproj
@@ -90,6 +90,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Css\font-awesome-4.7.0\css\font-awesome.css" />
+    <Content Include="Css\font-awesome-4.7.0\css\font-awesome.min.css" />
+    <Content Include="Css\font-awesome-4.7.0\fonts\fontawesome-webfont.svg" />
+    <Content Include="Css\font-awesome-4.7.0\HELP-US-OUT.txt" />
     <Content Include="Css\mainstyle.css">
       <DependentUpon>mainstyle.scss</DependentUpon>
     </Content>
@@ -116,6 +120,40 @@
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
     <Content Include="Views\Shared\_MainLayout.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Css\font-awesome-4.7.0\fonts\fontawesome-webfont.eot" />
+    <Content Include="Css\font-awesome-4.7.0\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Css\font-awesome-4.7.0\fonts\fontawesome-webfont.woff" />
+    <Content Include="Css\font-awesome-4.7.0\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Css\font-awesome-4.7.0\fonts\FontAwesome.otf" />
+    <Content Include="Css\font-awesome-4.7.0\less\animated.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\bordered-pulled.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\core.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\fixed-width.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\font-awesome.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\icons.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\larger.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\list.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\mixins.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\path.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\rotated-flipped.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\screen-reader.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\stacked.less" />
+    <Content Include="Css\font-awesome-4.7.0\less\variables.less" />
+    <Content Include="Css\font-awesome-4.7.0\scss\font-awesome.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_animated.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_bordered-pulled.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_core.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_fixed-width.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_icons.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_larger.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_list.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_mixins.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_path.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_rotated-flipped.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_screen-reader.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_stacked.scss" />
+    <Content Include="Css\font-awesome-4.7.0\scss\_variables.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -125,11 +163,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Images\" />
     <Folder Include="JavaScripts\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Repository\Repository.csproj">
