--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DDMF\Conn.cs" />
     <Compile Include="DDMF\Mapper.cs" />
     <Compile Include="Factories\ProductFactory.cs" />
+    <Compile Include="Models\AdminTable.cs" />
     <Compile Include="Models\AuthorTable.cs" />
     <Compile Include="Models\CategoryTable.cs" />
     <Compile Include="Models\ContactInformationTable.cs" />
