--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DDMF\AutoFac.cs" />
     <Compile Include="DDMF\Conn.cs" />
     <Compile Include="DDMF\Mapper.cs" />
+    <Compile Include="Factories\AdminFactory.cs" />
     <Compile Include="Factories\AuthorFactory.cs" />
     <Compile Include="Factories\CategoryFactory.cs" />
     <Compile Include="Factories\ContactInformationFactory.cs" />
