--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Factories\OrderDetailsFactory.cs" />
     <Compile Include="Factories\OrderFactory.cs" />
     <Compile Include="Factories\ProductFactory.cs" />
+    <Compile Include="Factories\UsersFactory.cs" />
+    <Compile Include="Factories\ZipCodeFactory.cs" />
     <Compile Include="Models\AdminTable.cs" />
     <Compile Include="Models\AuthorTable.cs" />
     <Compile Include="Models\CategoryTable.cs" />
