--- a/BogWebShop/BogWebShop.csproj
+++ b/BogWebShop/BogWebShop.csproj
@@ -112,6 +112,43 @@
     <Content Include="Images\Banner.jpg" />
     <Content Include="Images\CMS\cms1.png" />
     <Content Include="Images\CMS\LOGIN.png" />
+    <Content Include="Images\Products\10l.JPG" />
+    <Content Include="Images\Products\10s.JPG" />
+    <Content Include="Images\Products\11l.JPG" />
+    <Content Include="Images\Products\11s.JPG" />
+    <Content Include="Images\Products\12l.JPG" />
+    <Content Include="Images\Products\12s.jpg" />
+    <Content Include="Images\Products\13l.JPG" />
+    <Content Include="Images\Products\13s.JPG" />
+    <Content Include="Images\Products\14l.JPG" />
+    <Content Include="Images\Products\14s.JPG" />
+    <Content Include="Images\Products\15l.JPG" />
+    <Content Include="Images\Products\15s.JPG" />
+    <Content Include="Images\Products\16l.JPG" />
+    <Content Include="Images\Products\16s.JPG" />
+    <Content Include="Images\Products\17l.JPG" />
+    <Content Include="Images\Products\17s.JPG" />
+    <Content Include="Images\Products\18l.JPG" />
+    <Content Include="Images\Products\18s.JPG" />
+    <Content Include="Images\Products\19l.JPG" />
+    <Content Include="Images\Products\1l.JPG" />
+    <Content Include="Images\Products\1s.JPG" />
+    <Content Include="Images\Products\2l.JPG" />
+    <Content Include="Images\Products\2s.JPG" />
+    <Content Include="Images\Products\3l.JPG" />
+    <Content Include="Images\Products\3s.JPG" />
+    <Content Include="Images\Products\4l.JPG" />
+    <Content Include="Images\Products\4s.JPG" />
+    <Content Include="Images\Products\5l.JPG" />
+    <Content Include="Images\Products\5s.JPG" />
+    <Content Include="Images\Products\6l.jpg" />
+    <Content Include="Images\Products\6s.JPG" />
+    <Content Include="Images\Products\7l.JPG" />
+    <Content Include="Images\Products\7s.JPG" />
+    <Content Include="Images\Products\8l.JPG" />
+    <Content Include="Images\Products\8s.JPG" />
+    <Content Include="Images\Products\9l.JPG" />
+    <Content Include="Images\Products\9s.JPG" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
