--- a/BogWebShop/BogWebShop.csproj
+++ b/BogWebShop/BogWebShop.csproj
@@ -149,6 +149,7 @@
     <Content Include="Images\Products\8s.JPG" />
     <Content Include="Images\Products\9l.JPG" />
     <Content Include="Images\Products\9s.JPG" />
+    <Content Include="JavaScripts\jquery-3.3.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -233,7 +234,6 @@
     <Folder Include="Areas\CMS\Models\" />
     <Folder Include="Areas\CMS\Views\Product\" />
     <Folder Include="Areas\CMS\Views\Shared\" />
-    <Folder Include="JavaScripts\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Users\" />
   </ItemGroup>
