--- a/BogWebShop/BogWebShop.csproj
+++ b/BogWebShop/BogWebShop.csproj
@@ -149,6 +149,7 @@
     <Content Include="Images\Products\8s.JPG" />
     <Content Include="Images\Products\9l.JPG" />
     <Content Include="Images\Products\9s.JPG" />
+    <Content Include="JavaScripts\indexcharts.js" />
     <Content Include="JavaScripts\jquery-3.3.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
