--- a/BogWebShop/BogWebShop.csproj
+++ b/BogWebShop/BogWebShop.csproj
@@ -188,6 +188,7 @@
     </Compile>
     <Compile Include="Helpers\FileTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AuthorVM.cs" />
     <Compile Include="ViewModels\ProductVM.cs" />
   </ItemGroup>
   <ItemGroup>
